--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,14 @@
-.nav-bar {
+.header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.score-bar {
   display:flex;
   justify-content: space-around;
+  width:100%;
+  margin:5px;
 }
 .score-group{
   display: flex;
@@ -21,9 +29,33 @@
   object-position: -72px 0px;
 }
 .status{
-  height:30px;
+  width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  margin-bottom:5px;
+}
+.modes,.defeated{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+  font-size:.75em;
+  max-width: 160px;
+  border:1px solid;
+  
+}
+mat-radio-group{
+  display: flex;
+  flex-direction: column;
+  flex-grow:1;
+  justify-content: space-evenly;
+}
+mat-radio-button{
+  margin:5px;
+}
+footer{
+  display:flex;
+  flex-direction: column;
   align-items: center;
 }
