--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+/* @font-face {
+	font-family:Titulo;
+	src:url(./assets/ARCADECLASSIC.TTF);
+}
+
 * {
-    box-sizing: border-box; 
-    margin:0;
-    padding:0;
-    border:0;
+	font-family:Titulo;
+	color:black;
+  box-sizing: border-box;  */
+* {
+  margin:0;
+  padding:0;
+  border:0;
 }
 
 html {
@@ -12,7 +19,8 @@ html {
 }
 
 body {
-    min-height: 100%;
+    /* min-height: 100%; */
+    height: 100%;
     width: 100%;
     background-color: #202830;
     color: #fff;
@@ -26,3 +34,4 @@ body {
 p{
     text-align: center;
 }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
